--- a/src/main/resources/templates/exam-options.html
+++ b/src/main/resources/templates/exam-options.html
@@ -251,7 +251,7 @@
 				        <option value="10">10問</option>
 				        <option value="30">30問</option>
 				        <option value="50">50問</option>
-				        <option value="100" selected>100問 (デフォルト)</option>
+				        <option value="100" selected>100問</option>
 				        <option value="999">全問解く</option>
 				    </select>
 				</div>
